<resources>
    <string name="lehigh_student_assistant">LEHSA</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Password</string>
    <string name="hint_fullname">FullName</string>
    <string name="hint_firstname">FirstName</string>
    <string name="hint_lastname">LastName</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="btn_link_to_signup">Sign Up</string>
    <string name="btn_link_to_signin">Sign In</string>
    <string name="logout">logout</string>
    <string name="update_password">Update Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="tracker">Tracker</string>
    <string name="locate_faculty">Faculty</string>
    <string name="faculty_face">Faculty Face</string>
    <string name="configuration">Settings</string>
    <string name="faq">Faq</string>
    <string name="save">Save</string>
    <string name="course">Courses</string>
    <string name="addTracker">Add Tracker</string>
    <string name="removeTracker">Remove Tracker</string>
    <string name="search">SEARCH</string>
    <string name="title_activity_configuration">Settings</string>
    <string name="course_prompt">Course</string>
    <string name="login_name">User Login Name:</string>
    <string name="full_name">User Full Name:</string>
    <string name="hint_faculty_search">CSE - faculty name</string>
    <string name="select_courses">Select Courses</string>
    <string name="select_remainders">Remove Remainders</string>
    <string name="ok_label">Save</string>
    <string name="dismiss_label">Cancel</string>
    <string name="clear_all_label">Clear All</string>
    <string name="action_settings">Settings</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>

    <string-array name="interests_array">
        <item>Select Interest(s)</item>
        <item>Sciences</item>
        <item>Business</item>
        <item>Computers</item>
        <item>Education</item>
    </string-array>

    <string-array name="frequency_array">
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </string-array>

    <string name="home">Hola!</string>
    <string name="friend_info_disp"> <b>%1$s:</b>\n\t\t %2$d second(s) ago \n\t\t located at %3$s, %4$s</string>
<!--    <string name="pretyy_info_disp"><b>%1$s:</b>\n%2$s</string>-->
    <string name="info_disp"><b>%1$s:</b>\n%2$s</string>

</resources>
