<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:layout_marginTop="5dp"
    android:background="@color/white"
    tools:context=".FacultySearch">

    <TextView
        android:id="@+id/locate_faculty_header"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="96dp"
        android:text="@string/locate_faculty"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#A4C639"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="90dp" />

    <SearchView
        android:id="@+id/faculty_name"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locate_faculty_header"
        android:layout_gravity="left"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:iconifiedByDefault="false"
        android:queryHint="@string/hint_faculty_search" />

    <Button
        android:id="@+id/faculty_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locate_faculty_header"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="2dp"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#4CAF50"
        tools:layout_editor_absoluteX="273dp"
        tools:layout_editor_absoluteY="301dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/faculty_face"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="180dp"
        android:text="@string/faculty_face"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/colorAccent" />
</RelativeLayout>

