
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_margin="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/home_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|left"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:text="@string/home"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FFC107"
            android:textSize="26sp"
            tools:layout_editor_absoluteX="4dp"
            tools:layout_editor_absoluteY="4dp" />

        <TextView
            android:id="@+id/courseNum"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/home_info"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/feature_tracker"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/tracker"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black_overlay"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/colorAccent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/feature_faculty"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/locate_faculty"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black_overlay"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/colorAccent" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/logout"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:backgroundTint="#F44336" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/chatbot"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="119dp"
        android:adjustViewBounds="true"
        android:elevation="8dp"
        android:padding="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_chatbot"
        app:backgroundTint="@color/colorThemeDark"
        app:fabCustomSize="70dp"
        app:fabSize="auto"
        app:maxImageSize="80dp" />

</RelativeLayout>